deepseek-blog/http-routes-split.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: deepseek
  namespace: gloo-system
spec:
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /deepseek
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /v1/chat/completions
    backendRefs:
      - group: gloo.solo.io
        kind: Upstream
        name: deepseek
        namespace: gloo-system
        weight: 50
      - group: gloo.solo.io
        kind: Upstream
        name: deepseek-local
        namespace: gloo-system
        weight: 50
